<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StudentManagementSystemProject</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="addstring">add</string>
    <string name="removestring">remove</string>
    <string name="modifystring">modify</string>
    <string name="id">ID: </string>
    <string name="name">Name: </string>
    <string name="sex">Sex: </string>
    <string name="birth">Birth: </string>
    <string name="mobilephone">Mobile Phone: </string>
    <string name="address">Address: </string>
    <string name="add">Add</string>
</resources>
