<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TableRow
        android:id="@+id/modifytableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modifytextView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/name" 
            android:gravity="bottom|right"
            />

        <EditText
            android:id="@+id/modifynameET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/modifytableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modifytextView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/sex" 
            android:gravity="bottom|right"
            />

        <EditText
            android:id="@+id/modifysexET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>

    <TableRow
        android:id="@+id/modifytableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modifytextView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/birth" 
            android:gravity="bottom|right"
            />

        <EditText
            android:id="@+id/modifybirthET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>

    <TableRow
        android:id="@+id/modifytableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modifytextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobilephone" />

        <EditText
            android:id="@+id/modifymobilephoneET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>

    <TableRow
        android:id="@+id/modifytableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
        <TextView
            android:id="@+id/modifytextView5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/address" 
            android:gravity="bottom|right"
            />

        <EditText
            android:id="@+id/modifyaddressET"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />
    </TableRow>
<Button
        android:id="@+id/modifybutton"
        android:layout_width="wrap_content"
        android:text="Modify" 
        android:layout_height="35dp"
        android:layout_marginTop="27dp"
        android:background="@drawable/button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textSize="13sp"
        />
</TableLayout>
